[gd_scene load_steps=48 format=3 uid="uid://c60x122x18yca"]

[ext_resource type="Script" uid="uid://cmlbdl25wtr5x" path="res://scripts/player/player.gd" id="1_hmply"]
[ext_resource type="Script" uid="uid://bt2rpuuexcdqw" path="res://scripts/player/view.gd" id="2_b6sy1"]
[ext_resource type="Script" uid="uid://bgclr5b06nrag" path="res://scripts/state/StateMachine.gd" id="2_enrq2"]
[ext_resource type="Script" uid="uid://eq72tai6grx7" path="res://scripts/player/states/Standing.gd" id="3_5amry"]
[ext_resource type="Script" uid="uid://dx3gufri5f4yk" path="res://scripts/components/input/interact_ray.gd" id="3_ws782"]
[ext_resource type="Script" uid="uid://d34apem2rl34r" path="res://scripts/player/states/Crouching.gd" id="4_b6sy1"]
[ext_resource type="Script" uid="uid://bjf5ygse8a66o" path="res://scripts/components/move_component.gd" id="4_dolh7"]
[ext_resource type="Texture2D" uid="uid://dsdob8i5i52bh" path="res://assets/sprites/Hand_Test.png" id="4_g0bbo"]
[ext_resource type="Script" uid="uid://c5cd0lxe4hvy0" path="res://scripts/components/input/input_component.gd" id="4_kai5h"]
[ext_resource type="Texture2D" uid="uid://cw32wut8m3x7u" path="res://assets/sprites/Hand_Test_n.png" id="5_j77er"]
[ext_resource type="Script" uid="uid://cxsnelnl6fr6r" path="res://scripts/player/states/Idle.gd" id="5_ws782"]
[ext_resource type="Script" uid="uid://bwrnvumrlu58t" path="res://scripts/player/states/Move.gd" id="6_0sm0w"]
[ext_resource type="Script" uid="uid://34hpp2flshk1" path="res://scripts/player/hold_sprite.gd" id="6_1a147"]
[ext_resource type="Script" uid="uid://d1xtvn5e2ed2" path="res://scripts/player/states/Falling.gd" id="9_0sm0w"]
[ext_resource type="PackedScene" uid="uid://7l8f2mnhn2of" path="res://scripts/components/hitshapes/hit_box.tscn" id="14_p83wy"]
[ext_resource type="Script" uid="uid://cihu6ca2jckx3" path="res://scripts/item/inventory_component.gd" id="14_yj7se"]
[ext_resource type="PackedScene" uid="uid://dwqrv743gcoqs" path="res://scripts/components/senses/sound_source.tscn" id="15_g4jq6"]
[ext_resource type="AudioStream" uid="uid://m7p0f5dkwktr" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 1.wav" id="17_p5jbr"]
[ext_resource type="Script" uid="uid://bf7qj2wyefj1f" path="res://scripts/projectile/projectile_spawner.gd" id="18_8clcj"]
[ext_resource type="Texture2D" uid="uid://c68nwvuhd31at" path="res://assets/ui/GameplayBorder_-_LeftCorner.png" id="18_kcr71"]
[ext_resource type="AudioStream" uid="uid://cyb5xsa4juuba" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 2.wav" id="18_ww5gr"]
[ext_resource type="AudioStream" uid="uid://t7ige8s0ptyo" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 3.wav" id="19_sg88g"]
[ext_resource type="Texture2D" uid="uid://dahjx8r0u4uxk" path="res://assets/ui/GameplayBorder_-_RightCorner.png" id="19_vtmsy"]
[ext_resource type="AudioStream" uid="uid://dqxidcw0sjw58" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 4.wav" id="20_ksv7p"]
[ext_resource type="AudioStream" uid="uid://c3d7o8dsblhcb" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 5.wav" id="21_4gavd"]
[ext_resource type="AudioStream" uid="uid://bpxp80p7lconk" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 6.wav" id="22_vyxf7"]
[ext_resource type="AudioStream" uid="uid://cqi8ioiqqlif2" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 7.wav" id="23_1a147"]
[ext_resource type="AudioStream" uid="uid://dp2vs0rhaymji" path="res://assets/sound_fx/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Grass/GRASS - Walk short 8.wav" id="24_pf1ci"]
[ext_resource type="Script" uid="uid://deubnu35gf6ql" path="res://scripts/components/dialogue/dialogue_component.gd" id="25_vyxf7"]
[ext_resource type="Texture2D" uid="uid://bqqd8uuma54jy" path="res://assets/ui/InventoryBorder_-_Lindisfarne.png" id="25_ww5gr"]
[ext_resource type="Texture2D" uid="uid://bjrw5nem8sl6m" path="res://assets/ui/dialogue_banner.png" id="26_vyxf7"]
[ext_resource type="Theme" uid="uid://bmgb7v1fr26om" path="res://media/ui_themes/base_theme.tres" id="27_sg88g"]
[ext_resource type="Texture2D" uid="uid://hf0rvb3w6hvf" path="res://assets/ui/HygebaldBiscopFrame_-_30.07.25.png" id="31_vyxf7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p83wy"]
render_priority = 1
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
no_depth_test = true
albedo_texture = ExtResource("4_g0bbo")
normal_enabled = true
normal_scale = 0.25
normal_texture = ExtResource("5_j77er")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_enrq2"]
radius = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_ws782"]
radius = 0.4

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ho210"]
streams_count = 8
stream_0/stream = ExtResource("17_p5jbr")
stream_1/stream = ExtResource("18_ww5gr")
stream_2/stream = ExtResource("19_sg88g")
stream_3/stream = ExtResource("20_ksv7p")
stream_4/stream = ExtResource("21_4gavd")
stream_5/stream = ExtResource("22_vyxf7")
stream_6/stream = ExtResource("23_1a147")
stream_7/stream = ExtResource("24_pf1ci")

[sub_resource type="Animation" id="Animation_p83wy"]
resource_name = "Crouch"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1.5, 0, 0.5, 1, 0, 0.75, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StandCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CrouchCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j77er"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1.5, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StandCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CrouchCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g0bbo"]
resource_name = "Stand"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.75, 0, 0.5, 1, 0, 1.5, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StandCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CrouchCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4jq6"]
_data = {
&"Crouch": SubResource("Animation_p83wy"),
&"RESET": SubResource("Animation_j77er"),
&"Stand": SubResource("Animation_g0bbo")
}

[sub_resource type="Animation" id="Animation_g4jq6"]
resource_name = "Idle"
length = 0.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_yj7se"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoundSource")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_sound"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyddv"]
_data = {
&"Idle": SubResource("Animation_g4jq6"),
&"Run": SubResource("Animation_yj7se")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sg88g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ksv7p"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yj7se"]
thickness = 4

[node name="CharacterBody3D" type="CharacterBody3D" groups=["Player"]]
rotation_edit_mode = 2
script = ExtResource("1_hmply")

[node name="View" type="Camera3D" parent="." node_paths=PackedStringArray("input")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
current = true
far = 400.0
script = ExtResource("2_b6sy1")
input = NodePath("../InputComponent")
sensitivity = 0.01

[node name="InteractRay" type="RayCast3D" parent="View"]
target_position = Vector3(0, 0, -1.5)
collision_mask = 4
script = ExtResource("3_ws782")

[node name="ItemAttachment" type="Marker3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.6, -1.2)

[node name="Sprite" type="Sprite3D" parent="View/ItemAttachment"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
layers = 2
material_override = SubResource("StandardMaterial3D_p83wy")
cast_shadow = 0
shaded = true
double_sided = false
no_depth_test = true
texture = ExtResource("4_g0bbo")
script = ExtResource("6_1a147")

[node name="ProjectileSpawner" type="Node3D" parent="View" node_paths=PackedStringArray("owner_hit_box")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
script = ExtResource("18_8clcj")
owner_hit_box = NodePath("../../HitBox")

[node name="StandCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_enrq2")

[node name="CrouchCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_ws782")
disabled = true

[node name="StanceStateMachine" type="Node" parent="." node_paths=PackedStringArray("base_state")]
script = ExtResource("2_enrq2")
base_state = NodePath("Standing")

[node name="Standing" type="Node" parent="StanceStateMachine" node_paths=PackedStringArray("animation_player", "movement", "input", "crouch_state", "state_machine")]
script = ExtResource("3_5amry")
animation = &"Stand"
animation_player = NodePath("../../StanceAnimationPlayer")
movement = NodePath("../../MoveComponent")
input = NodePath("../../InputComponent")
crouch_state = NodePath("../Crouching")
state_machine = NodePath("..")

[node name="Crouching" type="Node" parent="StanceStateMachine" node_paths=PackedStringArray("animation_player", "sound", "movement", "crouch_collider", "input", "stand_state", "state_machine")]
script = ExtResource("4_b6sy1")
animation = &"Crouch"
move_speed_modifier = 0.6
sound_modifier = 0.5
animation_player = NodePath("../../StanceAnimationPlayer")
sound = NodePath("../../SoundSource")
movement = NodePath("../../MoveComponent")
crouch_collider = NodePath("../../CrouchCollision")
input = NodePath("../../InputComponent")
stand_state = NodePath("../Standing")
state_machine = NodePath("..")

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("base_state")]
script = ExtResource("2_enrq2")
base_state = NodePath("Idle")

[node name="Idle" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("animation_player", "movement", "character", "input", "move_state", "fall_state", "state_machine")]
script = ExtResource("5_ws782")
animation_player = NodePath("../../MovementAnimationPlayer")
animation = &"Idle"
movement = NodePath("../../MoveComponent")
character = NodePath("../..")
input = NodePath("../../InputComponent")
move_state = NodePath("../Moving")
fall_state = NodePath("../Falling")
state_machine = NodePath("..")

[node name="Moving" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("animation_player", "input", "movement", "camera", "idle_state", "fall_state", "state_machine")]
script = ExtResource("6_0sm0w")
animation_player = NodePath("../../MovementAnimationPlayer")
animation = &"Run"
input = NodePath("../../InputComponent")
movement = NodePath("../../MoveComponent")
camera = NodePath("../../View")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Falling")
state_machine = NodePath("..")

[node name="Falling" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("animation_player", "movement", "idle_state", "state_machine")]
script = ExtResource("9_0sm0w")
animation_player = NodePath("../../MovementAnimationPlayer")
animation = &"Idle"
movement = NodePath("../../MoveComponent")
idle_state = NodePath("../Idle")
state_machine = NodePath("..")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("4_dolh7")
body = NodePath("..")
movement_speed = 1.5

[node name="InputComponent" type="Node" parent="."]
script = ExtResource("4_kai5h")
mouse_mode = 2

[node name="HitBox" parent="." instance=ExtResource("14_p83wy")]

[node name="SoundSource" parent="." instance=ExtResource("15_g4jq6")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_ho210")
volume_db = -20.0

[node name="StanceAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g4jq6")
}

[node name="MovementAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uyddv")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("dialogue_label")]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 649.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("25_vyxf7")
dialogue_label = NodePath("MarginContainer/TextureRect4/Label")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Dialogue"]
layout_mode = 0
offset_left = 89.0
offset_top = 12.0
offset_right = 710.0
offset_bottom = 269.0
metadata/_edit_group_ = true

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Dialogue/MarginContainer"]
layout_mode = 2
texture = ExtResource("26_vyxf7")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Dialogue/MarginContainer/TextureRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_top = 66.0
offset_right = -168.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("27_sg88g")
text = "“I must of these hæðenes write to Alcuin…”"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Dialogue"]
layout_mode = 0
offset_left = 14.0
offset_top = -8.0
offset_right = 190.0
offset_bottom = 266.0
metadata/_edit_group_ = true

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/Dialogue/MarginContainer2"]
layout_mode = 2
texture = ExtResource("31_vyxf7")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_kcr71")
expand_mode = 1
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_vtmsy")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer"]
offset_left = 25.0
offset_top = 504.0
offset_right = 405.0
offset_bottom = 636.0
texture = ExtResource("25_ww5gr")
expand_mode = 1
stretch_mode = 5

[node name="InventoryComponent" type="PanelContainer" parent="CanvasLayer" node_paths=PackedStringArray("item_name_label", "item_description_label", "item_icon")]
offset_left = 90.0
offset_top = 538.0
offset_right = 570.0
offset_bottom = 656.0
scale = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxEmpty_sg88g")
script = ExtResource("14_yj7se")
item_name_label = NodePath("HBoxContainer/VBoxContainer/Item")
item_description_label = NodePath("HBoxContainer/VBoxContainer/Description")
item_icon = NodePath("HBoxContainer/center/TextureRect")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InventoryComponent"]
layout_mode = 2

[node name="center" type="PanelContainer" parent="CanvasLayer/InventoryComponent/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ksv7p")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryComponent/HBoxContainer/center"]
custom_minimum_size = Vector2(100, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InventoryComponent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item" type="Label" parent="CanvasLayer/InventoryComponent/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("27_sg88g")
theme_override_font_sizes/font_size = 24
text = "Item Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/InventoryComponent/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_yj7se")

[node name="Description" type="Label" parent="CanvasLayer/InventoryComponent/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("27_sg88g")
text = "Item Description. This is the item description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 162

[connection signal="pick_up_item" from="View/InteractRay" to="CanvasLayer/InventoryComponent" method="add_item"]
[connection signal="interact_pressed" from="InputComponent" to="View/InteractRay" method="_on_interact"]
[connection signal="inventory_scrolled_down" from="InputComponent" to="CanvasLayer/InventoryComponent" method="decrease_focus"]
[connection signal="inventory_scrolled_up" from="InputComponent" to="CanvasLayer/InventoryComponent" method="increase_focus"]
[connection signal="throw_pressed" from="InputComponent" to="CanvasLayer/InventoryComponent" method="_on_throw_pressed"]
[connection signal="got_hit" from="HitBox" to="." method="die"]
[connection signal="focus_changed" from="CanvasLayer/InventoryComponent" to="View/ItemAttachment/Sprite" method="set_current_item"]
[connection signal="item_dropped" from="CanvasLayer/InventoryComponent" to="View/ProjectileSpawner" method="spawn_from_item"]
